=== SVN

* Added Dataset#empty? method (#46).

* Fixed Symbol#to_field_name to support names with numbers and upper-case characters (#45).

* Added install_no_doc rake task.

* Partial refactoring of model code.

* Refactored dataset-model association and added Dataset#set_row_filter method.

* Added support for case-sensitive regexps to mysql adapter.

* Changed mysql adapter to support encoding option as well.

* Added charset/encoding option to postgres adapter.

* Implemented Model.serialize (thanks Aman Gupta.)

* Changed Model.create to INSERT DEFAULT VALUES instead of (id) VALUES (null) (brings back #41.)

* Fixed Model.new to work without arguments.

* Added Model.no_primary_key method to allow models without primary keys.

* Added Model#this method (#42 thanks Duane Johnson).

* Fixed Dataset#insert_sql to use DEFAULT VALUES clause if argument is an empty hash.

* Fixed Model.create to work correctly when no argument is passed (#41).

=== 0.2.0.2 (2007-09-07)

* Dataset#insert can now accept subqueries.

* Changed Migrator.apply to return the version.

* Changed Sequel::Model() to cache intermediate classes so descendant classes can be reopened (#39).

* Added :charset option to MySQL adapter (#40).

* Fixed Dataset#exclude to add parens around NOT expression (#38).

* Fixed use of sub-queries with all comparison operators in block filters (#38).

* Fixed arithmetic expressions in block filters to not be literalized.

* Changed Symbol#method_missing to return LiteralString.

* Changed PrettyTable to right-align numbers.

* Fixed Model.create_table (thanks Duane Johnson.)

=== 0.2.0.1 (2007-09-04)

* Improved support for invoking methods with inline procs inside block filters.

=== 0.2.0 (2007-09-02)

* Fixed Model.drop_table (thanks Duane Johnson.)

* Dataset#each can now return rows for arbitrary SQL by specifying :sql option.

* Added spec for postgres adapter.

* Fixed Model.method_missing to work with new SQL generation.
