@@ -65,7 +65,7 @@ task :install do
   sh %{sudo gem install pkg/#{NAME}-#{VERS}}
 end
 
-task :install_no_doc do
+task :install_no_docs do
   sh %{rake package}
   sh %{sudo gem install pkg/#{NAME}-#{VERS} --no-rdoc --no-ri}
 end
