@@ -5,6 +5,7 @@ end
 
 require File.join(File.dirname(__FILE__), 'model/base')
 require File.join(File.dirname(__FILE__), 'model/hooks')
+require File.join(File.dirname(__FILE__), 'model/record')
 require File.join(File.dirname(__FILE__), 'model/schema')
 require File.join(File.dirname(__FILE__), 'model/relations')
 
@@ -26,61 +27,10 @@ module Sequel
     
     ############################################################################
     
-    attr_reader :values, :pkey
-    
-    def model
-      self.class
-    end
-    
-    def primary_key
-      self.class.primary_key
-    end
-    
-    def initialize(values = nil)
-      @values = values || {}
-      @pkey = values[self.class.primary_key]
-    end
-    
-    def exists?
-      this.count > 0
-    end
-    
-    def this
-      @this ||= (pk = primary_key) ? self.class.dataset.filter(pk => @pkey) : \
-        raise(SequelError, "Model class does not have a primary key")
-    end
-    
-    def refresh
-      @values = this.naked.first || raise(SequelError, "Record not found")
-      self
-    end
-    
     def self.destroy_all
       has_hooks?(:before_destroy) ? dataset.destroy : dataset.delete
     end
     def self.delete_all; dataset.delete; end
-    
-    def self.create(*values)
-      db.transaction do
-        # values ||= {primary_key => nil} if primary_key
-        obj = new(*values)
-        obj.save
-        obj
-      end
-    end
-    
-    def destroy
-      db.transaction do
-        run_hooks(:before_destroy)
-        delete
-        run_hooks(:after_destroy)
-      end
-    end
-    
-    def delete
-      this.delete
-      self
-    end
     
     FIND_BY_REGEXP = /^find_by_(.*)/.freeze
     FILTER_BY_REGEXP = /^filter_by_(.*)/.freeze
@@ -120,7 +70,7 @@ module Sequel
       write = m.to_s =~ WRITE_ATTR_REGEXP
       att = write ? $1.to_sym : m
       # raise unless the att is recognized or this is a new unaved record
-      super unless @values.include?(att) || !@pkey
+      super unless @values.include?(att) || @new
       
       write ? (self[att] = value) : self[att]
     end
@@ -130,35 +80,8 @@ module Sequel
     
     def id; @values[:id]; end
     
-    def save
-      run_hooks(:before_save)
-      if @pkey # record exists, so we update it
-        run_hooks(:before_update)
-        this.update(@values)
-        run_hooks(:after_update)
-      else # no pkey, so we insert a new record
-        run_hooks(:before_create)
-        p = primary_key
-        if p && !@values[p]
-          @pkey = model.dataset.insert(@values)
-          refresh
-        else # this model does not use a primary key
-          model.dataset.insert(@values)
-          @pkey = @values[p] if p
-        end
-        run_hooks(:after_create)
-      end
-      run_hooks(:after_save)
-      self
-    end
-    
     def ==(obj)
       (obj.class == model) && (obj.values == @values)
-    end
-    
-    def set(values)
-      this.update(values)
-      @values.merge!(values)
     end
     
     SERIALIZE_GET_PROC = "proc {@unserialized_%s ||= YAML.load(@values[:%s]) }".freeze
