@@ -10,8 +10,8 @@ module Sequel
       define_method name, &eval(ONE_TO_ONE_PROC % [key, klass])
     end
   
-    ONE_TO_MANY_PROC = "proc {%s.filter(:%s => @pkey)}".freeze
-    ONE_TO_MANY_ORDER_PROC = "proc {%s.filter(:%s => @pkey).order(%s)}".freeze
+    ONE_TO_MANY_PROC = "proc {%s.filter(:%s => pkey)}".freeze
+    ONE_TO_MANY_ORDER_PROC = "proc {%s.filter(:%s => pkey).order(%s)}".freeze
     def self.one_to_many(name, opts)
       klass = opts[:class] ? opts[:class] :
         (FROM_DATASET % (opts[:table] || name.inspect))
