@@ -1,5 +1,7 @@
 === SVN
 
+* More model refactoring. Added support for composite keys.
+
 * Added Dataset#empty? method (#46).
 
 * Fixed Symbol#to_field_name to support names with numbers and upper-case characters (#45).
